--- a/main.ipynb
+++ b/main.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
     "    for feat in lex_feats:\n",
     "        cvec = CountVectorizer(\n",
     "            lowercase=False,\n",
-    "            ngram_range=(1, 3),\n",
+    "            ngram_range=(1,2),\n",
     "            vocabulary=whitelist,   # You can work with your own whitelist\n",
     "            max_features=3000,  # Or work with the top 1000 most frequent items, or...\n",
     "            token_pattern=u\"(?u)\\\\b\\\\S+\\\\b\",  # Use these settings if you want to keep punctuation\n",
@@ -643,7 +643,7 @@
     "        if brown:\n",
     "            cvec = CountVectorizer(\n",
     "                lowercase=False,\n",
-    "                ngram_range=(1,3),\n",
+    "                ngram_range=(1,2),\n",
     "                max_features=10000,\n",
     "                token_pattern=u\"(?u)\\\\b\\\\S+\\\\b\",\n",
     "                analyzer=\"word\"\n",
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,23 @@
     "#   micro_recall: 0.6765327695560254\n",
     "#   macro_recall: 0.230230284329872\n",
     "#   micro_f1: 0.6765327695560254\n",
-    "#   macro_f1: 0.2609409260189481"
+    "#   macro_f1: 0.2609409260189481\n",
+    "\n",
+    "# bigrams:\n",
+    "# XGBTrial brown:\n",
+    "#   accuracy: 0.6837561663143058\n",
+    "#   micro_recall: 0.6837561663143058\n",
+    "#   macro_recall: 0.24760293490693278\n",
+    "#   micro_f1: 0.6837561663143058\n",
+    "#   macro_f1: 0.2771510576657067\n",
+    "\n",
+    "# trigrams:\n",
+    "# XGBTrial brown:\n",
+    "#   accuracy: 0.6834038054968288\n",
+    "#   micro_recall: 0.6834038054968288\n",
+    "#   macro_recall: 0.24767309976822838\n",
+    "#   micro_f1: 0.6834038054968288\n",
+    "#   macro_f1: 0.27648584807706494\n"
    ]
   }
  ],
